@@ -54,6 +54,7 @@ dillo-fltk2
  - FTP dpi: Fixed algorithm bugs and improved the mime-type detector.
  - CCC: added reentrancy control to the OpEnd and OpAbort operations.
  - CCC: enhanced the debug function and implemented OpAbort for dpi.
+ - Hooked a decoder for text/plain with charset.
    Patches: Jorge Arellano Cid
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color, panel_size, geometry, fullscreen,
